# pipewire-speaker-calibration

./: .gitattributes  .gitignore  Cargo.toml  README.md  install.sh  justfile  speaker-eq.py
.github/workflows/: release.yml
ci/: pwtune.rb.tmpl  speaker-eq.rb.tmpl
src/: dsp.rs  main.rs  profile.rs  system.rs  ui.rs
